# scribble

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .ruff.toml  CLAUDE.md  LICENSE  Makefile  README.md  Taskfile.yml  app.py  docker-compose.yml  index.html  pyproject.toml  requirements.txt  setup.py
.claude/: analysis.md
.github/: renovate.json  template.yml
.github/workflows/: ci.yml  deploy.yml  deptry.yml  docker-test.yml  main.yml  maintain.yml  marimo.yml  podman.yml  pre-commit.yml  release.yml  rhiza_ci.yml  rhiza_security.yml  slides.yml  test.yml  test_image.yml
.rhiza/: history  template.yml
apps/: app.html  app.py
binder/: Dockerfile
book/marimo/notebooks/: rhiza.py
docker/: .dockerignore  Dockerfile  Dockerfile.dockerignore  README.md  test_docker.sh
marimo/: Scribble.ipynb  scribble.py  ui.py
marimo/input/: names.csv
notebooks/: Scribble.ipynb
pyscribble/: __init__.py  _letter.py  _plot.py  _scribble.py  letter.py  plot.py  scribble.py
scribble/: scribble.py
taskfiles/: build.yml
tests/: __init__.py  requirements.txt  test_a.py  test_cells.py  test_coverage.py  test_download.py  test_download_link.py  test_function_map.py  test_imports.py  test_input_event.py  test_inputs.py  test_letter.py  test_main.py  test_makefile.py  test_output.py  test_output_cell.py  test_plot.py  test_scribble.py  test_series.py  test_taskfile.py
work/: Complex.ipynb  Scribble.ipynb
work/pyscribble/: letter.py  scribble.py
