[project]
name = "scribble"
version = "0.0.0"
description = "Companion materials for the Scribble project."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thomas Schmelzer" }]
license = { file = "LICENSE" }

dependencies = [
  "plotly",
  "numpy",
  "marimo",
  "pandas>=2.3.3",
  "packaging>=25.0",
]
