[project]
name = "scribble"
version = "0.0.0"
description = "Companion materials for the Scribble project."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Thomas Schmelzer" }]
license = { file = "LICENSE" }

dependencies = []

[dependency-groups]
dev = [
    "marimo>=0.18.0",
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "pandas>=2.3.3"
]
